# ur_ws

./: .gitignore  README.md  requirements.txt
scripts/: maskrcnn_zmq_inference.py  tf_publisher.py
src/opencv/: package.xml  setup.py
src/opencv/config/: object_color_profiles.yaml
src/opencv/launch/: color_filter.launch.py  perception.launch.py  read_image_from_camera.launch.py
src/opencv/opencv/: color_filtering.py  cube_global_pose_node.py  depth_cube_segmenter.py  edge_detection.py  get_hsv_click.py  hsv_tuner.py  load_image_from_camera.py  maskrcnn_realsense_node.py  multi_object_perception_node.py  object_depth_segmenter.py  pose_estimation.py  pose_estimator.py  tsdf_gazebo_node.py  zmq_camera_pub.py
src/ur5_camera_gripper_moveit_config/: .setup_assistant  package.xml
src/ur5_camera_gripper_moveit_config/config/: chomp_planning.yaml  ompl_planning.yaml  ur.srdf  ur.urdf.xacro
src/ur5_camera_moveit_config/: .setup_assistant  package.xml
src/ur5_camera_moveit_config/config/: ur.srdf  ur.urdf.xacro
src/ur_sim/: CMakeLists.txt  package.xml
src/ur_sim/launch/: spawn_ur5_camera.launch.py  spawn_ur5_camera_gripper.launch.py  spawn_ur5_camera_gripper_moveit.launch.py  spawn_ur5_camera_moveit.launch.py  view_ur5_camera.launch.py  view_ur5_camera_gripper.launch.py
src/ur_sim/models/Stapler/: model.config  model.sdf
src/ur_sim/models/Stapler/meshes/: Stapler.dae  Stapler.stl.stl
src/ur_sim/models/calculator/: model.config  model.sdf
src/ur_sim/models/calculator/meshes/: calculator.dae  calculator.stl
src/ur_sim/models/green_cube/: model.sdf
src/ur_sim/models/mini_stacking_box/: model.config  model.sdf
src/ur_sim/models/mini_stacking_box/meshes/: mini_stacking_box.dae
src/ur_sim/models/mouse/: model.config  model.sdf
src/ur_sim/models/mouse/meshes/: mouse.stl
src/ur_sim/models/robo_basement/: model.config  model.sdf
src/ur_sim/models/scissor/: model.config  model.sdf
src/ur_sim/models/scissor/meshes/: scissor.dae  scissor.stl
src/ur_sim/rviz/: config_ur5_robotiq.rviz  view_ur5_camera.rviz
src/ur_sim/src/: pick_place.cpp  pick_place_v2.cpp  pick_place_vision.cpp  pick_place_vision_v3.cpp  test_ik.cpp  test_ik_collision_obj.cpp
src/ur_sim/urdf/: camera.xacro  robotiq_gripper_macro.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro  ur5_macro.xacro
src/ur_sim/worlds/: world1.world  world2.world
