<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">
  <name>ur_sim</name>
  <version>0.0.0</version>
  <description>UR5 Vision-based Pick and Place Simulation</description>

  <maintainer email="amrita@todo.todo">amrita</maintainer>
  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 🔥 REQUIRED FOR CUSTOM MESSAGES -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- MoveIt -->
  <depend>moveit_ros_planning_interface</depend>

  <!-- Gazebo + Control -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>controller_manager</depend>

  <!-- Robot descriptions -->
  <depend>ur_description</depend>
  <depend>robotiq_description</depend>

  <!-- Attach/Detach -->
  <depend>linkattacher_msgs</depend>
  <depend>ros2_linkattacher</depend>

  <!-- Utils -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>moveit_ros_move_group</depend>

  <!-- 🔥 REQUIRED FOR USING GENERATED MESSAGES -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 🔥 VERY IMPORTANT -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>

    <gazebo_ros gazebo_model_path="/home/roboticslab/ur_ws/install/ur_sim/share/"/>
    <gazebo_ros gazebo_model_path="/home/roboticslab/ur_ws/install/robotiq_description/share/"/>
  </export>

</package>
